crates/snapshot-tests/tests/snapshots/parser__inline_tables_multiline.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: valid_toml
---
{
  "a": {
    "b": 1
  },
  "b": {
    "a": 1,
    "b": 2
  },
  "c": {
    "a": 1,
    "b": {
      "c": 2
    }
  },
  "d": {
    "a": [
      1,
      2,
      3
    ]
  },
  "e": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "f": {
    "a": 1,
    "b": 2
  },
  "g": {
    "a": {
      "b": {
        "c": 1
      }
    },
    "d": [
      1,
      2
    ]
  },
  "h": {
    "a": 1
  },
  "i": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "j": {
    "a": 1,
    "b": {
      "c": 2
    }
  },
  "k": {
    "a": [
      1,
      2,
      3
    ]
  },
  "l": {
    "a": {
      "b": {
        "c": 1
      }
    },
    "d": [
      1,
      2
    ]
  }
}
