crates/snapshot-tests/tests/snapshots/parser__key_names.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: valid_toml
---
{
  "foo": 3,
  "foo_3": 3,
  "foo_-2--3--r23f--4-f2-4": 3,
  "_": 3,
  "-": 3,
  "8": 8,
  "a": 3,
  "!": 3,
  "a^b": 3,
  "\"": 3,
  "character encoding": "value",
  "ʎǝʞ": "value",
  "key#name": 5,
  "~!@#$^&*()_+-`1234567890[]\\|/?><.,;:'": 1
}
