crates/snapshot-tests/tests/snapshots/parser__literal_eats_crlf.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: valid_toml
---
{
  "foo": "",
  "bar": "a"
}
