crates/snapshot-tests/tests/snapshots/parser__many_blank-2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: spans
---
note[string]: root_foo
  ┌─ many_blank:1:7
  │  
1 │   foo = """
  │ ╭───────^
2 │ │ 
3 │ │ 
4 │ │ """
  │ ╰───^

note[table]: root
  ┌─ many_blank:1:1
  │  
1 │ ╭ foo = """
2 │ │ 
3 │ │ 
4 │ │ """
  │ ╰───^
