crates/snapshot-tests/tests/snapshots/parser__strings-2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: spans
---
note[string]: root_bar
  ┌─ strings:1:7
  │
1 │ bar = "\U00000000"
  │       ^^^^^^^^^^^^

note[string]: root_unicode
  ┌─ strings:2:11
  │
2 │ unicode = "δ"
  │           ^^^

note[string]: root_key1
  ┌─ strings:3:8
  │
3 │ key1 = "One\nTwo"
  │        ^^^^^^^^^^

note[string]: root_key2
  ┌─ strings:4:8
  │
4 │ key2 = """One\nTwo"""
  │        ^^^^^^^^^^^^^^

note[string]: root_empty
  ┌─ strings:5:9
  │
5 │ empty = ""
  │         ^^

note[string]: root_key3
  ┌─ strings:6:8
  │  
6 │   key3 = """
  │ ╭────────^
7 │ │ One
8 │ │ Two"""
  │ ╰──────^

note[string]: root_key4
   ┌─ strings:10:8
   │
10 │ key4 = "The quick brown fox jumps over the lazy dog."
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_key5
   ┌─ strings:11:8
   │  
11 │   key5 = """
   │ ╭────────^
12 │ │ The quick brown \
13 │ │ 
14 │ │ 
15 │ │ fox jumps over \
16 │ │ the lazy dog."""
   │ ╰────────────────^

note[string]: root_key6
   ┌─ strings:17:8
   │  
17 │   key6 = """\
   │ ╭────────^
18 │ │    The quick brown \
19 │ │    fox jumps over \
20 │ │    the lazy dog.\
21 │ │    """
   │ ╰──────^

note[string]: root_winpath
   ┌─ strings:23:11
   │
23 │ winpath = 'C:\Users\nodejs\templates'
   │           ^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_winpath2
   ┌─ strings:24:12
   │
24 │ winpath2 = '\\ServerX\admin$\system32\'
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_quoted
   ┌─ strings:25:10
   │
25 │ quoted = 'Tom "Dubs" Preston-Werner'
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_regex
   ┌─ strings:26:9
   │
26 │ regex = '<\i\c*\s*>'
   │         ^^^^^^^^^^^^

note[string]: root_regex2
   ┌─ strings:28:10
   │
28 │ regex2 = '''I [dw]on't need \d{2} apples'''
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lines
   ┌─ strings:29:9
   │  
29 │   lines = '''
   │ ╭─────────^
30 │ │ The first newline is
31 │ │ trimmed in raw strings.
32 │ │ All other whitespace
33 │ │ is preserved.
34 │ │ '''
   │ ╰───^

note[string]: root_firstnl
   ┌─ strings:35:11
   │  
35 │   firstnl = '''
   │ ╭───────────^
36 │ │ This string has a ' quote character.'''
   │ ╰───────────────────────────────────────^

note[string]: root_lbackspace
   ┌─ strings:38:14
   │
38 │ lbackspace = 'This string has a \b backspace character.'
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_ltab
   ┌─ strings:39:8
   │
39 │ ltab = 'This string has a \t tab character.'
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lnewline
   ┌─ strings:40:12
   │
40 │ lnewline = 'This string has a \n new line character.'
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lformfeed
   ┌─ strings:41:13
   │
41 │ lformfeed = 'This string has a \f form feed character.'
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lcarriage
   ┌─ strings:42:13
   │
42 │ lcarriage = 'This string has a \r carriage return character.'
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lslash
   ┌─ strings:43:10
   │
43 │ lslash = 'This string has a \/ slash character.'
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_lbackslash
   ┌─ strings:44:14
   │
44 │ lbackslash = 'This string has a \\ backslash character.'
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_backspace
   ┌─ strings:47:13
   │
47 │ backspace = "This string has a \b backspace character."
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_tab
   ┌─ strings:48:7
   │
48 │ tab = "This string has a \t tab character."
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_newline
   ┌─ strings:49:11
   │
49 │ newline = "This string has a \n new line character."
   │           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_formfeed
   ┌─ strings:50:12
   │
50 │ formfeed = "This string has a \f form feed character."
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_carriage
   ┌─ strings:51:12
   │
51 │ carriage = "This string has a \r carriage return character."
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_quote
   ┌─ strings:52:9
   │
52 │ quote = "This string has a \" quote character."
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_slash
   ┌─ strings:53:9
   │
53 │ slash = "This string has a / slash character."
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_backslash
   ┌─ strings:54:13
   │
54 │ backslash = "This string has a \\ backslash character."
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode1
   ┌─ strings:55:15
   │
55 │ notunicode1 = "This string does not have a unicode \\u escape."
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode2
   ┌─ strings:56:15
   │
56 │ notunicode2 = "This string does not have a unicode \u005Cu escape."
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode3
   ┌─ strings:57:15
   │
57 │ notunicode3 = "This string does not have a unicode \\u0075 escape."
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_notunicode4
   ┌─ strings:58:15
   │
58 │ notunicode4 = "This string does not have a unicode \\\u0075 escape."
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_delete
   ┌─ strings:59:10
   │
59 │ delete = "This string has a \u007F delete control code."
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_unitseparator
   ┌─ strings:60:17
   │
60 │ unitseparator = "This string has a \u001F unit separator control code."
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note[string]: root_answer1
   ┌─ strings:63:11
   │
63 │ answer1 = "\u000B"
   │           ^^^^^^^^

note[string]: root_answer4
   ┌─ strings:64:11
   │
64 │ answer4 = "\u03B4α"
   │           ^^^^^^^^^

note[string]: root_answer8
   ┌─ strings:65:11
   │
65 │ answer8 = "\U000003B4β"
   │           ^^^^^^^^^^^^^

note[string]: root_answer9
   ┌─ strings:66:11
   │
66 │ answer9 = "\uc0de"
   │           ^^^^^^^^

note[string]: root_answer10
   ┌─ strings:67:12
   │
67 │ answer10 = "\u03b4α"
   │            ^^^^^^^^^

note[string]: root_answer11
   ┌─ strings:68:12
   │
68 │ answer11 = "\U0000abc1"
   │            ^^^^^^^^^^^^

note[table]: root
   ┌─ strings:1:1
   │  
 1 │ ╭ bar = "\U00000000"
 2 │ │ unicode = "δ"
 3 │ │ key1 = "One\nTwo"
 4 │ │ key2 = """One\nTwo"""
   · │
68 │ │ answer11 = "\U0000abc1"
69 │ │ 
   │ ╰^
