crates/snapshot-tests/tests/snapshots/parser__strings.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: valid_toml
---
{
  "bar": "\u0000",
  "unicode": "δ",
  "key1": "One\nTwo",
  "key2": "One\nTwo",
  "empty": "",
  "key3": "One\nTwo",
  "key4": "The quick brown fox jumps over the lazy dog.",
  "key5": "The quick brown fox jumps over the lazy dog.",
  "key6": "The quick brown fox jumps over the lazy dog.",
  "winpath": "C:\\Users\\nodejs\\templates",
  "winpath2": "\\\\ServerX\\admin$\\system32\\",
  "quoted": "Tom \"Dubs\" Preston-Werner",
  "regex": "<\\i\\c*\\s*>",
  "regex2": "I [dw]on't need \\d{2} apples",
  "lines": "The first newline is\ntrimmed in raw strings.\nAll other whitespace\nis preserved.\n",
  "firstnl": "This string has a ' quote character.",
  "lbackspace": "This string has a \\b backspace character.",
  "ltab": "This string has a \\t tab character.",
  "lnewline": "This string has a \\n new line character.",
  "lformfeed": "This string has a \\f form feed character.",
  "lcarriage": "This string has a \\r carriage return character.",
  "lslash": "This string has a \\/ slash character.",
  "lbackslash": "This string has a \\\\ backslash character.",
  "backspace": "This string has a \b backspace character.",
  "tab": "This string has a \t tab character.",
  "newline": "This string has a \n new line character.",
  "formfeed": "This string has a \f form feed character.",
  "carriage": "This string has a \r carriage return character.",
  "quote": "This string has a \" quote character.",
  "slash": "This string has a / slash character.",
  "backslash": "This string has a \\ backslash character.",
  "notunicode1": "This string does not have a unicode \\u escape.",
  "notunicode2": "This string does not have a unicode \\u escape.",
  "notunicode3": "This string does not have a unicode \\u0075 escape.",
  "notunicode4": "This string does not have a unicode \\u escape.",
  "delete": "This string has a  delete control code.",
  "unitseparator": "This string has a \u001f unit separator control code.",
  "answer1": "\u000b",
  "answer4": "δα",
  "answer8": "δβ",
  "answer9": "샞",
  "answer10": "δα",
  "answer11": "ꯁ"
}
